--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -31,6 +31,21 @@ tasks:
     cmds:
       - docker buildx build -t client_app_js:latest .
 
+  vulnerability-check:
+    desc: "Runs the npm audition to identify vulnerabilities"
+    cmds:
+      - "npm audit"
+
+  test-hash:
+    desc: "Quick command for easy testing: runs the hashing command with Default profile"
+    cmds:
+      - node ./dist/cli.js --profile=Default hash "Hello"
+
+  test-sign:
+    desc: "Quick command for easy testing: runs certificate signing command with Default profile"
+    cmds:
+      - node ./dist/cli.js --profile=Default sign ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/end-entity.csr ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/ca_cert.pem ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/private_key.pem
+
   test:
     desc: "Runs the tests"
     cmds:
@@ -46,12 +61,10 @@ tasks:
     cmds:
       - npm run format
 
-  test-hash:
-    desc: "Quick command for easy testing: runs the hashing command with Default profile"
+  ci:
+    desc: "Runs local continuous integration checks on source code"
     cmds:
-      - node ./dist/cli.js --profile=Default hash "Hello"
-
-  test-sign:
-    desc: "Quick command for easy testing: runs certificate signing command with Default profile"
-    cmds:
-      - node ./dist/cli.js --profile=Default sign ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/end-entity.csr ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/ca_cert.pem ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/private_key.pem
+    - task: format
+    - task: lint
+    - task: test
+    - task: vulnerability-check
